WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287513
Regression(
288453@main
) Unexpectedly removed public API on DOMCSSRule
https://bugs.webkit.org/show_bug.cgi?id=287513
Summary
Regression(288453@main) Unexpectedly removed public API on DOMCSSRule
Ahmad Saleem
Reported
2025-02-11 14:41:17 PST
Reintroduce what was broken in Source/WebKitLegacy/mac/DOM/DOMCSSRule.h.
Attachments
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2025-02-11 14:41:32 PST
rdar://144642410
Ahmad Saleem
Comment 2
2025-02-11 15:06:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40435
EWS
Comment 3
2025-02-11 18:22:43 PST
Committed
290248@main
(95d82b92cca5): <
https://commits.webkit.org/290248@main
> Reviewed commits have been landed. Closing PR #40435 and removing active labels.
EWS
Comment 4
2025-02-18 11:33:50 PST
Committed
289651.135@safari-7621-branch
(66c53f628135): <
https://commits.webkit.org/289651.135@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2622 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug