Regression(288453@main) Unexpectedly removed public API on DOMCSSRule https://bugs.webkit.org/show_bug.cgi?id=287513 rdar://144642410

Reviewed by Tim Nguyen and Brent Fulgham.

This patch reintroduces what was removed unintentionally in 288453@main,
to ensure that we don't break public API.

* Source/WebKitLegacy/mac/DOM/DOMCSSRule.h:

Canonical link: https://commits.webkit.org/290248@main